/*
 *  Made for college assignments/personal projects.
 *  Do not use without permission
 */

package com.pbo1.figure;
/**
 *
 * @author echa
 * Bernardus Hersa Galih Prakoso - 215314018
 * Informatika - Universitas Sanata Dharma
 */
public class Circle3 extends Circle2{
    
    private Circle2 circle3;    
    
    public Circle3(){
        
    }
    
    public Circle3(double xPosition, double yPosition){
        circle3.setXPosition(xPosition);
        circle3.setYPosition(yPosition);
    }
    
}
