/*
 *  Made for college assignments/personal projects.
 *  Do not use without permission
 */

package com.pbo1.figure;

/**
 *
 * @author echa
 * Bernardus Hersa Galih Prakoso - 215314018
 * Informatika - Universitas Sanata Dharma
 */
public class Circle5 {

}
